--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
 <center><h1>PyBytes</h1></center>
+<b>PyBytes</b> is a Python-to-Java-Bytecode compiler. It converts Python code to ".class" file that can be run on a JVM.
 </body>
 </html>
